# ipylivebash

./: .coveragerc  .eslintignore  .gitignore  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README.md  codecov.yml  install.json  ipylivebash.json  package.json  pyproject.toml  pytest.ini  setup.py  tsconfig.json  webpack.config.js
.github/workflows/: build.yml
css/: widget.css
docs/: Makefile  environment.yml  make.bat
docs/source/: conf.py  develop-install.rst  index.rst  installing.rst
examples/: introduction.ipynb
ipylivebash/: __init__.py  _frontend.py  _version.py  debounce.py  livemagic.py  logfile.py  logview.py  run_task.py  runner.py  runtask.py  session.py  session_manager.py  sessionmanager.py  utils.py
ipylivebash/exp/: scaffold.py
ipylivebash/nbextension/: extension.js
ipylivebash/tests/: conftest.py  test_changedispatcher.py  test_envfilevar.py  test_envvar.py  test_jsonfilevar.py  test_logfile.py  test_logview.py  test_nbextension_path.py  test_patchers.py  test_patchers_assign.py  test_patchers_dict.py  test_processor.py  test_runner.py  test_runtask.py  test_scaffold.py  test_scaffoldwidget.py  test_session.py  test_sessionmanager.py  test_utils.py
playground/: ConfigPanel.ipynb
src/: extension.ts  index.ts  plugin.ts  version.ts  widget.ts
src/__tests__/: index.spec.ts
webcomp/: .eslintrc  .parcelrc  package.json
webcomp/src/: ConfirmationDialog.tsx  IconButton.tsx  LiveBashPanel.tsx  LiveBashPanelRenderer.tsx  LoadingSpinner.tsx  ScrollablePane.tsx  SessionTable.tsx  TextView.tsx  Toolbar.tsx  index.html  index.tsx  types.tsx
(+48 files in other folders)
